Aligned company names

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>About Eloheh Healthcare</title>
+  <title>About HealthPlus Co.</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
     :root {
@@ -90,7 +90,7 @@
 </head>
 <body>
 
-  <h1>About Eloheh Healthcare</h1>
+  <h1>About HealthPlus Co.</h1>
 
   <div class="section">
     <h2><u>Our Story</u></h2>
@@ -106,7 +106,7 @@
 
     <p>Our care model has empowered <em>hundreds of thousands</em> of patients to take charge of their health. And we're just getting started. <a href="https://www.who.int/health-topics/telemedicine" target="_blank">Explore how telemedicine is shaping the future of care</a>.</p>
 
-    <p><a href="assets/Eloheh_Company_Brochure.pdf" download>📄 Download our company brochure (PDF)</a></p>
+    <p><a href="assets/HealthPlus_Co_Brochure.pdf" download>📄 Download our company brochure (PDF)</a></p>
   </div>
 
   <div class="section">
@@ -142,7 +142,7 @@
       </div>
     </div>
 
-    <p>Want to connect with author of this page? Email us at <a href="mailto:author@elohehhealth.com">author@elohehhealth.com</a>.</p>
+    <p>Want to connect with author of this page? Email us at <a href="mailto:info@healthplusco.com">author@elohehhealth.com</a>.</p>
   </div>
 
   <div class="section">
