Rename to HealthPlus Co

--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
   <div class="section">
     <h2><u>Our Story</u></h2>
 
-    <p><strong>Eloheh Healthcare</strong> was founded in 2010 by Dr. Samantha Ruiz to bridge the growing care gap in rural America. Our goal was simple yet ambitious: bring compassionate, clinically rigorous care to people wherever they are—no matter how remote.</p>
+    <p><strong>HealPlus Co. </strong> was founded in 2010 by Dr. Samantha Ruiz to bridge the growing care gap in rural America. Our goal was simple yet ambitious: bring compassionate, clinically rigorous care to people wherever they are—no matter how remote.</p>
 
     <ul class="timeline">
-      <li><strong>2012:</strong> First virtual cardiology consult completed using Eloheh's app</li>
+      <li><strong>2012:</strong> First virtual cardiology consult completed using HealthPlus Co.'s app</li>
       <li><strong>2016:</strong> Named Top 10 Most Innovative Digital Health Startups (HealthTech Journal)</li>
       <li><strong>2020:</strong> Surpassed 1 million virtual visits during COVID-19 pandemic response</li>
-      <li><strong>2024:</strong> Launched Eloheh Mobile+ for low-connectivity regions</li>
+      <li><strong>2024:</strong> Launched HealthPlus Co. Mobile+ for low-connectivity regions</li>
     </ul>
 
     <p>Our care model has empowered <em>hundreds of thousands</em> of patients to take charge of their health. And we're just getting started. <a href="https://www.who.int/health-topics/telemedicine" target="_blank">Explore how telemedicine is shaping the future of care</a>.</p>
@@ -118,7 +118,7 @@
       </div>
       <div>
         <h3>Dr. Samantha Ruiz – CEO & Founder</h3>
-        <p><em>"People before platforms."</em> With a background in emergency medicine and public health, Samantha founded Eloheh with a mission to close care gaps through digital innovation.</p>
+        <p><em>"People before platforms."</em> With a background in emergency medicine and public health, Samantha founded HealthPlus Co. with a mission to close care gaps through digital innovation.</p>
       </div>
     </div>
 
@@ -128,7 +128,7 @@
       </div>
       <div>
         <h3>Javier Nguyen – CTO</h3>
-        <p>Javier leads our technology team and pioneered the Eloheh API suite, now used by over 300 clinics nationwide. He believes telehealth should be <em>simple, secure, and scalable</em>.</p>
+        <p>Javier leads our technology team and pioneered the HealthPlus Co. API suite, now used by over 300 clinics nationwide. He believes telehealth should be <em>simple, secure, and scalable</em>.</p>
       </div>
     </div>
 
@@ -142,14 +142,14 @@
       </div>
     </div>
 
-    <p>Want to connect with author of this page? Email us at <a href="mailto:info@healthplusco.com">author@elohehhealth.com</a>.</p>
+    <p>Want to connect with author of this page? Email us at <a href="mailto:info@healthplusco.com">author@HealthPlusCo.health.com</a>.</p>
   </div>
 
   <div class="section">
     <h2>How to Start Your First Virtual Visit</h2>
-    <p>Getting started with Eloheh Healthcare is simple. Just follow these steps:</p>
+    <p>Getting started with HealthPlus Co. is simple. Just follow these steps:</p>
     <ol style="margin: 1rem 0 1rem 1.5rem;">
-      <li>Sign up for an Eloheh account</li>
+      <li>Sign up for an HealthPlus Co. account</li>
       <li>Choose your healthcare provider</li>
       <li>Schedule a virtual appointment</li>
       <li>Connect using our secure app</li>
