--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       </div>
     </div>
 
-    <p>Want to connect with author of this page? Email us at <a href="mailto:info@healthplusco.com">author@HealthPlusCo.health.com</a>.</p>
+    <p>Want to connect with author of this page? Email us at <a href="mailto:info@healthplusco.com">info@healthplusco.com</a>.</p>
   </div>
 
   <div class="section">
