--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
   <div class="section">
     <h2><u>Our Story</u></h2>
 
-    <p><strong>HealPlus Co. </strong> was founded in 2010 by Dr. Samantha Ruiz to bridge the growing care gap in rural America. Our goal was simple yet ambitious: bring compassionate, clinically rigorous care to people wherever they are—no matter how remote.</p>
+    <p><strong>HealthPlus Co. </strong> was founded in 2010 by Dr. Samantha Ruiz to bridge the growing care gap in rural America. Our goal was simple yet ambitious: bring compassionate, clinically rigorous care to people wherever they are—no matter how remote.</p>
 
     <ul class="timeline">
       <li><strong>2012:</strong> First virtual cardiology consult completed using HealthPlus Co.'s app</li>
@@ -106,7 +106,7 @@
 
     <p>Our care model has empowered <em>hundreds of thousands</em> of patients to take charge of their health. And we're just getting started. <a href="https://www.who.int/health-topics/telemedicine" target="_blank">Explore how telemedicine is shaping the future of care</a>.</p>
 
-    <p><a href="assets/About_HealthPlusCo.pdf" download>📄 Download our company brochure (PDF)</a></p>
+    <p><a href="assets/About_HealthPlusCo.pdf" download>📄 Download Our Company History & Management (PDF)</a></p>
   </div>
 
   <div class="section">
